; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/nctgpio/extr_nctgpio.c_nct_gpio_pin_toggle.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/nctgpio/extr_nctgpio.c_nct_gpio_pin_toggle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nct_softc = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@GPIO_PIN_OUTPUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64)* @nct_gpio_pin_toggle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nct_gpio_pin_toggle(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca %struct.nct_softc*, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %5, align 8
  %8 = call i32 @NCT_IS_VALID_PIN(i64 %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %2
  %11 = load i32, i32* @EINVAL, align 4
  store i32 %11, i32* %3, align 4
  br label %49

12:                                               ; preds = %2
  %13 = load i32, i32* %4, align 4
  %14 = call %struct.nct_softc* @device_get_softc(i32 %13)
  store %struct.nct_softc* %14, %struct.nct_softc** %6, align 8
  %15 = load %struct.nct_softc*, %struct.nct_softc** %6, align 8
  %16 = call i32 @GPIO_ASSERT_UNLOCKED(%struct.nct_softc* %15)
  %17 = load %struct.nct_softc*, %struct.nct_softc** %6, align 8
  %18 = call i32 @GPIO_LOCK(%struct.nct_softc* %17)
  %19 = load %struct.nct_softc*, %struct.nct_softc** %6, align 8
  %20 = getelementptr inbounds %struct.nct_softc, %struct.nct_softc* %19, i32 0, i32 0
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = load i64, i64* %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i64 %22
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @GPIO_PIN_OUTPUT, align 4
  %27 = and i32 %25, %26
  %28 = icmp eq i32 %27, 0
  br i1 %28, label %29, label %33

29:                                               ; preds = %12
  %30 = load %struct.nct_softc*, %struct.nct_softc** %6, align 8
  %31 = call i32 @GPIO_UNLOCK(%struct.nct_softc* %30)
  %32 = load i32, i32* @EINVAL, align 4
  store i32 %32, i32* %3, align 4
  br label %49

33:                                               ; preds = %12
  %34 = load %struct.nct_softc*, %struct.nct_softc** %6, align 8
  %35 = load i64, i64* %5, align 8
  %36 = call i64 @nct_read_pin(%struct.nct_softc* %34, i64 %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %42

38:                                               ; preds = %33
  %39 = load %struct.nct_softc*, %struct.nct_softc** %6, align 8
  %40 = load i64, i64* %5, align 8
  %41 = call i32 @nct_write_pin(%struct.nct_softc* %39, i64 %40, i32 0)
  br label %46

42:                                               ; preds = %33
  %43 = load %struct.nct_softc*, %struct.nct_softc** %6, align 8
  %44 = load i64, i64* %5, align 8
  %45 = call i32 @nct_write_pin(%struct.nct_softc* %43, i64 %44, i32 1)
  br label %46

46:                                               ; preds = %42, %38
  %47 = load %struct.nct_softc*, %struct.nct_softc** %6, align 8
  %48 = call i32 @GPIO_UNLOCK(%struct.nct_softc* %47)
  store i32 0, i32* %3, align 4
  br label %49

49:                                               ; preds = %46, %29, %10
  %50 = load i32, i32* %3, align 4
  ret i32 %50
}

declare dso_local i32 @NCT_IS_VALID_PIN(i64) #1

declare dso_local %struct.nct_softc* @device_get_softc(i32) #1

declare dso_local i32 @GPIO_ASSERT_UNLOCKED(%struct.nct_softc*) #1

declare dso_local i32 @GPIO_LOCK(%struct.nct_softc*) #1

declare dso_local i32 @GPIO_UNLOCK(%struct.nct_softc*) #1

declare dso_local i64 @nct_read_pin(%struct.nct_softc*, i64) #1

declare dso_local i32 @nct_write_pin(%struct.nct_softc*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
